--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,4 +12,8 @@ boto3
 email-validator
 python-multipart
 requests
-
+langchain-openai
+langchain-core
+langchain-openai
+langchain-core
+langchain-google-genai
